dnl Process this file with autoconf to produce a configure script.
dnl Initialize
AC_INIT(gdbmdefs.h)
AC_CONFIG_HEADER(autoconf.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_INT_16_BITS
AC_LONG_64_BITS
AC_WORDS_BIGENDIAN
AC_CONST
AC_HAVE_HEADERS(stdlib.h string.h sys/file.h unistd.h fcntl.h sys/types.h)
AC_HAVE_HEADERS(memory.h)
AC_HAVE_LIBRARY(dbm)
AC_HAVE_LIBRARY(ndbm)
AC_HAVE_FUNCS(rename ftruncate flock bcopy fsync)
AC_REPLACE_FUNCS(getopt)
AC_ALLOCA
AC_OFF_T
AC_ST_BLKSIZE
AC_OUTPUT(Makefile)
